# gibb_security_projekt

./: CMakeLists.txt  main.cpp
app/controllers/user/: UserController.cpp  UserController.h  user_controller.cpp  user_controller.h
app/models/: UserModel.cpp  user_model.cpp  user_model.h
app/services/user/: user_service.cpp  user_service.h
core/: core_controller.cpp  logger.cpp  network.cpp
core/include/: common.h  controller.h  core_controller.h  interrupt_handler.h  logger.h  network.h  runtime_utils.h
docs/: doc.md
include/: dep.sh
